0.1-alpha2/_sources/gene/AGAP010158.rst.txt
:orphan:



AGAP010158
==========

Location: **3R:49,599,773-49,642,633**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP010158>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=3R:49599773-49642633#genomebrowser>`_

Overlapping signals
-------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/UGS/3/2/index`, "3R:49,600,001-49,820,000", 300 (90 | 210)
    





Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP010158';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


