0.1-alpha3/_sources/gene/AGAP010158.rst.txt
:orphan:



AGAP010158
==========

Location: **3R:49,599,773-49,642,633**





External links:
`VectorBase <https://www.vectorbase.org/Anopheles_gambiae/Gene/Summary?g=AGAP010158>`_ |
`Ag1000G genome browser <https://www.malariagen.net/apps/ag1000g/phase1-AR3/index.html?genome_region=3R:49599773-49642633#genomebrowser>`_





Overlapping selection signals
-----------------------------

The following signals have a focus which overlaps this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/GWA/3/1/index`
      - H12
      - Guinea Bissau
      - 3R:49,480,000-49,620,000
      - 165
      - 93.8%
      - nan
    * - :doc:`../signal/XPEHH/UGS.BFS/3/5/index`
      - XPEHH
      - Uganda *An. gambiae*
      - 3R:49,540,000-49,660,000
      - 93
      - 98.9%
      - nan
    




Adjacent selection signals
--------------------------

The following signals have a focus which occurs within 50 kbp of this gene.

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/UGS/3/2/index`
      - H12
      - Uganda *An. gambiae*
      - 3R:49,660,000-49,880,000
      - 427
      - 93.3%
      - nan
    




Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/gene/AGAP010158';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


